--- a/src/components/countdown/countdown.scss
+++ b/src/components/countdown/countdown.scss
@@ -2,10 +2,9 @@
   font-family: 'Courier New', Courier, monospace;
   width: 100dvw;
   height: 100dvh;
-  font-size: 10rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   background-color: white;
 }
 
@@ -25,6 +24,7 @@
   animation-fill-mode: forwards;
   animation-timing-function: linear;
   z-index: 2;
+  transform: translateY(50%);
 }
 
 .countdown__background-color {
@@ -39,7 +39,7 @@
   position: absolute;
   top: 0;
   left: 3%;
-  height: 330px;
+  width: clamp(175px, calc(10.9375rem + ((1vw - 3.75px) * 29.0909)), 415px);
   transition: transform 1s ease-in-out;
   z-index: 1;
 
@@ -53,10 +53,22 @@
 }
 
 .countdown__time {
+  font-size: clamp(110px, calc(6.875rem + ((1vw - 3.75px) * 25.4545)), 320px);
   z-index: 2;
   color: rgb(0, 220, 255);
   mix-blend-mode: difference;
   position: relative;
+  left: -50%;
+  transform: translateX(50%);
+  transition: transform 0.5s ease-in-out, left 0.5s ease-in-out;
+
+
+  .countdown--warning-1 & {
+    @media screen and (max-width: 1769px) {
+      left: 0;
+      transform: translateX(0);
+    }
+  }
 
   .countdown--overtime & {
     &::before {
@@ -92,7 +104,7 @@
   display: flex;
   gap: 0.8rem;
   bottom: 2rem;
-  right: 2rem;
+  left: 2rem;
   z-index: 2;
 
   .countdown__button {
