--- a/src/components/inputs/inputs.scss
+++ b/src/components/inputs/inputs.scss
@@ -8,6 +8,10 @@
   align-items: center;
   justify-content: center;
   background-color: var(--midnight-blue);
+
+  .button {
+    font-size: 1.5rem;
+  }
 }
 
 .inputs__container-inner {
